--- a/content/brand.html
+++ b/content/brand.html
@@ -24,7 +24,7 @@ title = "Brand"
     </header>
     <div class="row">
       <div class="card col-md-6 col-xs-12">
-        <h5 class="illustration col-md-4"><img style="height: 8rem; width: auto;" src="/img/svg/sia-green-logo.svg"></h5>
+        <h5 class="illustration col-md-4"><img style="height: 8rem; width: auto;" src="/img/v1/veritascoin.png"></h5>
       </div>
       <div class="card col-md-6 col-xs-12">
         <h5 class="illustration col-md-4"><img style="height: 8rem; width: auto;" src="/assets/globals/logo.svg"></h5>
