--- a/content/index.html
+++ b/content/index.html
@@ -13,28 +13,28 @@ i18nwarnings = [ "zh-hant", "ru" ]
 				{{% i18n "index_subtitle" %}}
 			</h2>
 
-			<div class="columns has-text-centered">
-				<div class="column is-hidden-mobile"></div>
-				<div class="column is-hidden-mobile"></div>
-				<div class="column is-hidden-mobile"></div>
-				<div class="column">
-					<a href="get-started" class="button is-large is-primary is-inverted is-outlined"> {{% i18n "index_getstartedbtn" %}} </a>
-				</div>
-				<div class="column">
-					<button class="button is-large is-primary is-inverted is-outlined" id="watchvideobutton"> {{% i18n "index_watchvideobtn" %}} </button>
-				</div>
-				<div class="column is-hidden-mobile"></div>
-				<div class="column is-hidden-mobile"></div>
-				<div class="column is-hidden-mobile"></div>
-			</div>
+			<!--<div class="columns has-text-centered">-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+				<!--<div class="column">-->
+					<!--<a href="get-started" class="button is-large is-primary is-inverted is-outlined"> {{% i18n "index_getstartedbtn" %}} </a>-->
+				<!--</div>-->
+				<!--<div class="column">-->
+					<!--<button class="button is-large is-primary is-inverted is-outlined" id="watchvideobutton"> {{% i18n "index_watchvideobtn" %}} </button>-->
+				<!--</div>-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+				<!--<div class="column is-hidden-mobile"></div>-->
+			<!--</div>-->
 
-			<div id="watchvideomodal" class="modal">
-				<div id="watchvideomodalbackground" class="modal-background"></div>
-				<div class="modal-content">
-					<iframe id="videoframe" width="560" height="315" src="https://www.youtube.com/embed/B4YGpWxyn6Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-				</div>
-				<button id="watchvideoclose" class="modal-close"></button>
-			</div>
+			<!--<div id="watchvideomodal" class="modal">-->
+				<!--<div id="watchvideomodalbackground" class="modal-background"></div>-->
+				<!--<div class="modal-content">-->
+					<!--<iframe id="videoframe" width="560" height="315" src="https://www.youtube.com/embed/B4YGpWxyn6Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>-->
+				<!--</div>-->
+				<!--<button id="watchvideoclose" class="modal-close"></button>-->
+			<!--</div>-->
 		</div>
 	</div>
 </section>
@@ -42,9 +42,9 @@ i18nwarnings = [ "zh-hant", "ru" ]
 <section class="section infosection">
 	<div class="container">
 		<div class="columns is-vcentered has-text-centered">
-			<div class="column is-hidden-tablet">
-				<img class="image siainfo-image-mobile" src="/img/siainfo1.png">
-			</div>
+			<!--<div class="column is-hidden-tablet">-->
+				<!--<img class="image siainfo-image-mobile" src="/img/siainfo1.png">-->
+			<!--</div>-->
 			<div class="column has-text-left">
 				<h2 class="title is-2 has-text-left"> {{% i18n "index_info1_title" %}} </h2>
 				<p> {{% i18n "index_info1_content" %}} </p>
@@ -54,12 +54,12 @@ i18nwarnings = [ "zh-hant", "ru" ]
 			</div>
 		</div>
 		<div class="columns is-vcentered has-text-centered">
-			<div class="column is-hidden-mobile">
-				<img class="image siainfo-image" src="/img/siainfo2.png">
-			</div>
-			<div class="column is-hidden-tablet">
-				<img class="image siainfo-image-mobile" src="/img/siainfo2.png">
-			</div>
+			<!--<div class="column is-hidden-mobile">-->
+				<!--<img class="image siainfo-image" src="/img/siainfo2.png">-->
+			<!--</div>-->
+			<!--<div class="column is-hidden-tablet">-->
+				<!--<img class="image siainfo-image-mobile" src="/img/siainfo2.png">-->
+			<!--</div>-->
 			<div class="column has-text-left">
 				<h2 class="title is-2 has-text-left"> {{% i18n "index_info2_title" %}} </h2>
 				<p> {{% i18n "index_info2_content" %}} </p>
@@ -67,9 +67,9 @@ i18nwarnings = [ "zh-hant", "ru" ]
 		</div>
 
 		<div class="columns is-vcentered has-text-centered">
-			<div class="column is-hidden-tablet">
-				<img class="image siainfo-image-mobile" src="/img/siainfo3.png">
-			</div>
+			<!--<div class="column is-hidden-tablet">-->
+				<!--<img class="image siainfo-image-mobile" src="/img/siainfo3.png">-->
+			<!--</div>-->
 			<div class="column has-text-left">
 				<h2 class="title is-2 has-text-left is-small"> {{% i18n "index_info3_title" %}} </h2>
 				<p> {{% i18n "index_info3_content" %}} </p>
